echo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 10
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: go-server:latest
        imagePullPolicy: Never
        args:
          - "-port=8080"
          - "-text=$(POD_NAME)"
          - "-delay=3000"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    app: echo
  ports:
    - port: 80
      targetPort: 8080

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: echo-loadbalancing
spec:
  host: echo-service
  exportTo: ["*"]
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    loadBalancer:
      simple: LEAST_REQUEST
    connectionPool:
      http:
        http1MaxPendingRequests: 100
        http2MaxRequests: 100
        maxRequestsPerConnection: 1
      tcp:
        maxConnections: 100
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: echo-gateway
spec:
  selector:
    istio: ingressgateway  # Use Istio's default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echo-vs
spec:
  hosts:
  - "*"
  gateways:
  - echo-gateway
  http:
  - route:
    - destination:
        host: echo-service
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ingress-gateway-least-request
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway 
  configPatches:
  - applyTo: CLUSTER
    match:
      context: GATEWAY
      cluster:
        service: echo-service.default.svc.cluster.local
    patch:
      operation: MERGE
      value:
        lb_policy: LEAST_REQUEST
        least_request_lb_config:
          choice_count: 60
